tests/ppapi_browser/bad/ppapi_bad_ppp_initialize.nmf
{
  "nexes": {
    "x86-32": "ppapi_bad_ppp_initialize_x86-32.nexe",
    "x86-64": "ppapi_bad_ppp_initialize_x86-64.nexe",
    "arm":    "ppapi_bad_ppp_initialize_arm.nexe"
  }
}
